static/css/screen.css
/* ... */
.submitted-session {
  background: #f0f0f0;
  border-right: 7px solid #ff9600;
  padding: 10px 15px 2px;
  margin-bottom: 10px;
}

.submitted-session h3 {
  margin: 0;
}

input[type="submit"]:disabled {
  background-color: #d3d3d3;
}

.sponsors > a {
  margin: 0 15px 0 15px;
}

/*font size in menu @ 768*/

